--- a/Route.Talabat.Dashboard/Views/_ViewImports.cshtml
+++ b/Route.Talabat.Dashboard/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Route.Talabat.Dashboard
+@using Microsoft.AspNetCore.Identity
 @using Route.Talabat.Dashboard.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
