--- a/Route.Talabat.Dashboard/Views/_ViewImports.cshtml
+++ b/Route.Talabat.Dashboard/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Route.Talabat.Dashboard
 @using Microsoft.AspNetCore.Identity
 @using Route.Talabat.Dashboard.Models
+@using Route.Talabat.Application.Abstraction.Auth
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
