--- a/Route.Talabat.Dashboard/Views/_ViewImports.cshtml
+++ b/Route.Talabat.Dashboard/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Route.Talabat.Dashboard.Models
 @using Route.Talabat.Application.Abstraction.Auth
+@using Route.Talabat.Dashboard.Models.Route.Talabat.Dashboard.Models
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
