--- a/Route.Talabat.Dashboard/wwwroot/css/styles.css
+++ b/Route.Talabat.Dashboard/wwwroot/css/styles.css
@@ -76,6 +76,17 @@
   }
 }
 
+.page-link.text-dark.bg-light:hover {
+    background-color: #d3d3d3 !important; 
+    color: #000 !important;
+}
+
+.pagination .active .page-link {
+    background-color: #000 !important;  
+    color: #fff !important;  
+    border-color: #000 !important;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
