--- a/Route.Talabat.Dashboard/Views/Product/Create.cshtml
+++ b/Route.Talabat.Dashboard/Views/Product/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model Route.Talabat.Dashboard.Models.ProductViewModel
-@{
+﻿@{
     ViewData["Title"] = "Create Product";
 }
 
@@ -12,42 +11,8 @@
         </div>
         <div class="card-body">
             <form asp-action="Create" method="post" enctype="multipart/form-data">
-                <div class="form-group">
-                    <label asp-for="Image" class="col-form-label "></label>
-                    <input asp-for="Image" class="form-control" type="file" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="Name" class="col-form-label"></label>
-                    <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Description" class="col-form-label"></label>
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Price" class="col-form-label"></label>
-                    <input asp-for="Price" class="form-control" type="number" />
-                    <span asp-validation-for="Price" class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <label asp-for="BrandId" class="col-form-label">Brand</label>
-                    <select class="form-control" asp-for="BrandId" asp-items="ViewBag.Brands">
-                        <option value="">-- Select Brand --</option>
-                    </select>
-                    <span asp-validation-for="BrandId" class="text-danger"></span>
-                </div>
-
-                <div class="form-group">
-                    <label asp-for="CategoryId" class="col-form-label">Category</label>
-                    <select class="form-control" asp-for="CategoryId" asp-items="ViewBag.Categories">
-                        <option value="">-- Select Category --</option>
-                    </select>
-                    <span asp-validation-for="CategoryId" class="text-danger"></span>
-                </div>
-
+            
+                <partial name="CreateUpdatePartialView"model="Model"></partial>
                 <button type="submit" class="btn btn-primary">Create Product</button>
             </form>
         </div>
