--- a/Route.Talabat.Dashboard/Views/Product/Create.cshtml
+++ b/Route.Talabat.Dashboard/Views/Product/Create.cshtml
@@ -13,7 +13,7 @@
             <form asp-action="Create" method="post" enctype="multipart/form-data">
             
                 <partial name="CreateUpdatePartialView"model="Model"></partial>
-                <button type="submit" class="btn btn-primary">Create Product</button>
+                <button type="submit" class="btn btn-primary my-3">Create Product</button>
             </form>
         </div>
     </div>
