--- a/Route.Talabat.Dashboard/Views/Product/CreateUpdatePartialView.cshtml
+++ b/Route.Talabat.Dashboard/Views/Product/CreateUpdatePartialView.cshtml
@@ -6,6 +6,8 @@
 <div class="form-group">
     <label asp-for="Image" class="col-form-label "></label>
     <input asp-for="Image" class="form-control" type="file" />
+    <span asp-validation-for="Image" class="text-danger"></span>
+
 </div>
 <div class="form-group">
     <label asp-for="Name" class="col-form-label"></label>
