--- a/Route.Talabat.Dashboard/Views/_ViewImports.cshtml
+++ b/Route.Talabat.Dashboard/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using Route.Talabat.Dashboard.Models
 @using Route.Talabat.Application.Abstraction.Auth
 @using Route.Talabat.Dashboard.Models.Route.Talabat.Dashboard.Models
+@using Route.Talabat.Core.Domain.Entities.Products
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
